# AiT_star

./: .gitignore  README.md  main.py
planners/: informed_rrt_star.py
ros2_ait_drone/: README.md  package.xml
ros2_ait_drone/config/: robot_description.yaml
ros2_ait_drone/launch/: drone_demo.launch.py
ros2_ait_drone/scripts/: drone_sim.py  supervisor_controller.py
ros2_ait_drone/src/: planner_node.cpp
ros2_ait_drone/worlds/: drone_demo.wbt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ait_star_sim/lib/ait_star_sim/: ait_star_node  path_follower
ros2_ws/install/ait_star_sim/share/ait_star_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/ait_star_sim/share/ait_star_sim/worlds/: ait_world.world
ros2_ws/log/: latest_build
ros2_ws/src/ait_star_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/ait_star_sim/ait_star_sim/: ait_star_node.py  path_follower.py
ros2_ws/src/ait_star_sim/ait_star_sim/planners/: ait_star.py  rrt_star.py
ros2_ws/src/ait_star_sim/ait_star_sim/utils/: environment.py
ros2_ws/src/ait_star_sim/resource/: ait_star_sim
ros2_ws/src/ait_star_sim/worlds/: ait_world.world
ros2_ws_AiTDrone/src/ros2_ait_drone/: CMakeLists.txt
ros2_ws_AiTDrone/src/ros2_ait_drone/config/: demo_params.yaml  rviz_config.rviz
ros2_ws_AiTDrone/src/ros2_ait_drone/launch/: drone_demo.launch.py
ros2_ws_AiTDrone/src/ros2_ait_drone/scripts/: webots_drone_driver.py  webots_obstacle_driver.py
ros2_ws_AiTDrone/src/ros2_ait_drone/src/: planner_node.cpp
ros2_ws_AiTDrone/src/ros2_ait_drone/worlds/: drone_demo.wbt
