<?xml version="1.0"?>
<package format="3">
  <name>ros2_ait_drone</name>
  <version>1.0.0</version>
  <description>AIT* drone path planning with dynamic obstacle avoidance</description>
  <maintainer email="you@umd.edu">Sidharth Mathur</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ompl</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
